Fix subtle alignment bugs

--- a/src/css/components/sidebar.sass
+++ b/src/css/components/sidebar.sass
@@ -22,10 +22,16 @@
   z-index: 50
   background-color: white
 
-// This is an alignment frame to optically align
-// sidebar icons and names
+.sidebar-align-icon-frame
+  display: flex
+  justify-content: center
+  align-items: center
+  height: $button-height
+  width: $button-height
+
 .sidebar-align-frame
   display: flex
   align-items: center
+  // Use padding to inset x-axis
   padding: 0 math.div($button-height - $tiny-icon-height, 2)
   height: $button-height
